         See https://forum.kodi.tv/showthread.php?tid=332283

WIP      [CORE] [LEIA] Recursive context menus.
         Pay attention to the select() bug in Kodi Krypton.
         This requires Kodi version detection and having different code for Krypton/Leia.


[B]Advanced MAME Launcher | version 0.10.0 | XX June 2019[/B]

WIP      [AUDIT] Samples distributed with MAME are uncompressed and not stored into ZIP files.
         The MAME audit engine must take this into account.
         See comments in mame_scan_MAME_ROMs() @mame.py

WIP      [DOCS] Improve AML wiki in Github and move documentation from Kodi forum to Github wiki.

WIP      [CORE] Implement the "Read-only launchers". ROLs are XML files that include the
         launcher information as well as the ROMs information. ROLs are generated with AML,
         can be exported as XML and then used with AEL. AEL will trear ROLs are read-only
         (cannot be edited). If a ROL should be changed, then the XML is edited or regenerated
         and then imported again into AML.

WIP      [CORE] AML/AEL must report the aspect ratio of artwork to the skin.

WIP      [CORE] New artwork type, 3dboxes.


[B]Advanced MAME Launcher | version 0.9.9 | XX March 2019[/B]

WIP      [FANARTS] Set an order to print fanart assets. This will allow to have images printed
         on top of each other.

WIP      [CORE] Improve the Samples scanner and report.

FEATURE  [CORE] MAME and SL plots build timestamp.

FEATURE  [CORE] MAME and SL Fanart build timestamp.

FEATURE  [CORE] MAME render and asset cache build timestamp.

FEATURE  [CORE] Move the utilities from the addon settings into the root menu.

FEATURE  [CORE] Move the report viewer from the context menu to the root menu. The context
         menu is a little bit overloaded and this will alleviate the situation.

FEATURE  [CORE] Use xbmcplugin.addDirectoryItems() instead of xbmcplugin.addDirectoryItem().